update more lld problems